# blockless-api-main

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pylintrc  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: alias_norm.py  analytics.py  auth.py  board_chip_map.py  board_pins.py  credit_store.py  db.py  easyeda_client.py  gallery_store.py  health.py  logging_config.py  main.py  models.py  module_aliases.py  module_classifier.py  package_store.py  pin_allocator.py  power_rules.py  project_store.py  recommendation_catalog.py  schema_validate.py  session_token.py  web_recommend.py  web_store.py
app/api/: __init__.py  admin.py  auth.py  boards.py  build.py  enclosure.py  enclosure_skin.py  gallery.py  landing.py  llm.py  model_fetch.py  projects.py  telemetry.py
app/core/: __init__.py  client_ip.py  config.py  errors.py  rate_limit.py
app/enclosure/: __init__.py  generator.py  module_profiles.py  placement.py  profiles.py  skin_backend.py  skin_mesh.py  thermal.py
app/llm/: __init__.py  provider.py
app/schemas/: __init__.py  boards.py  common.py
app/skills/: __init__.py  broker.py  catalog.py
app/validation/: __init__.py  providers.py
content/: README.md
content/boards/: esp32-devkitc-example.json
content/chips/: esp32-example.json
content/enclosure/module_profiles/: bmp280-example.json
content/models/: README.md
contracts/: browser_tools.schema.json  browser_validate.schema.json  device_command.schema.json
ppt/: build_ppt.py
scripts/: api-daemon.ps1  dev-up.ps1  serve.ps1
tests/: conftest.py  test_boards.py  test_smoke.py
